Genral UI fixes

--- a/public/login.html
+++ b/public/login.html
@@ -81,18 +81,18 @@ span.psw {
 </head>
 <body>
 
-<h2>Stempower Login Form</h2>
-
 <div id='root'/>
   
   <form class="modal-content animate">
     <div class="imgcontainer">
-      <p style="text-align:center">Login</p>
+        <p style="text-align:center">
+            <b><font size="5">Stempower Login Form</font></b>
+        </p>
     </div>
 
     <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
+      <label for="uname"><b>Email</b></label>
+      <input type="text" placeholder="Enter Email" name="uname" required>
 
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
