--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
     <![endif]-->
   </head>
   <body>
-    <div id='root'/>
-  </body>
+    <div id='root'></div>
   <script src="/bundle.js"></script>
-  <script src"/"></script>
+  </body>
 </html>
